# Collectable_Objects-CryEngine-

./: .gitignore  Game.cryproject  README.md
Assets/Audio/sdlmixer/assets/: breakingPitchedCrumble.ogg.cryasset  death_funny_long.ogg.cryasset  explosion5_deepReport.ogg.cryasset  explosionDeepQuickReport.ogg.cryasset  explosionDeepShort.ogg.cryasset  explosionGrenade.ogg.cryasset  explosionHuge.ogg.cryasset  explosionHugeDeepMuffled.ogg.cryasset  explosionLongHuge.ogg.cryasset  explosion_deep_boom.ogg.cryasset  fall_and_splash.ogg.cryasset  glassBreakingSoft.ogg.cryasset  glassPitched.ogg.cryasset  glass_breaking1.ogg.cryasset  glass_breaking2.ogg.cryasset  glass_breaking3.ogg.cryasset  glass_breaking4.ogg.cryasset  glass_breaking5.ogg.cryasset  ocean.ogg.cryasset  pipeCollisionWithSquawk.ogg.cryasset  shriek.ogg.cryasset  sinking.ogg.cryasset  splash.ogg.cryasset  squawk_crash.ogg.cryasset  squawk_death.ogg.cryasset  squawk_death2.ogg.cryasset  squawk_distressed.ogg.cryasset  squawk_high.ogg.cryasset  squawk_low.ogg.cryasset  squawk_medium.ogg.cryasset  squawk_medium_high.ogg.cryasset  starWhoosh.ogg.cryasset  star_electrical.ogg.cryasset  star_explosion_with_debris.ogg.cryasset
Assets/Levels/: example.level.cryasset  tst.level.cryasset
Assets/Levels/Flappy_F/: flappy_f.bak  flappy_f.bak2
Assets/Levels/Flappy_F/layers/: audio.bak  cameras.bak  cameras.bak2  holdingarea.bak  holdingarea.bak2  logic.bak  logic.bak2  main.bak  main.bak2  pipes.bak  pipes.bak2  terrain.bak  unused.bak
Assets/Levels/Flappy_F/leveldata/: Environment.bak2  GameTokens.bak  GameTokens.bak2  TimeOfDay.bak2
Assets/Levels/example/: example.level
Assets/Levels/example/Layers/: main.lyr
Assets/Levels/tst/: filelist.xml  level.pak  tst.bak  tst.bak2  tst.level
Assets/Levels/tst/Layers/: BorderLayer.bak  BorderLayer.bak2  CollectableObjectLayer.bak  Main.bak  Main.bak2  borderlayer.lyr  main.lyr  terrain.lyr
Assets/Levels/tst/leveldata/: Environment.xml  Heightmap.bak  Heightmap.bak2  Objectives.xml  TimeOfDay.xml
Assets/Libs/environmentpresets/levels/: tst.xml.cryasset
Assets/materials/: cloudtiling_diff.dds.cryasset
Assets/materials/generic/wood/: wood_beams_a_red+surface.mtl.cryasset  wood_rough_b_wet+surface.mtl.cryasset
Assets/objects/characters/flappyPlayer/: flappy_fly_loop.caf  flappy_idle.caf
Assets/objects/props/flappy_boid/: bird.cgf.cryasset  flappyboid.mtl.cryasset  pipe.cgf.cryasset  pipe.mtl.cryasset  pipe_closed.cgf.cryasset  pipe_closed_large.cgf.cryasset  pipe_edgy.cgf.cryasset  pipe_edgy_large.cgf.cryasset  pipe_glass.cgf.cryasset  pipe_glass_large.cgf.cryasset  pipe_grid.cgf.cryasset  pipe_grid_large.cgf.cryasset  pipe_large.cgf.cryasset  pipe_scifi.cgf.cryasset  pipe_scifi_large.cgf.cryasset  pipe_spikes.cgf.cryasset  pipe_spikes_large.cgf.cryasset  pipe_spiral.cgf.cryasset  pipe_spiral_large.cgf.cryasset  star.cgf.cryasset
Assets/objects/props/misc/3dtext/: a.cgf.cryasset  (+34 more)
Assets/particles/pfx2/: explosion_a.pfx.cryasset  explosion_glass.pfx.cryasset
Code/: CMakeLists.txt  GamePlugin.cpp  StdAfx.h
Code/Components/: Player.cpp  Player.h  SpawnPoint.cpp  collectableObject.cpp  collectableObject.h
(+3 files in other folders)
